# Inventory-Management-System

./: .dockerignore  .env  .env.example  .gitignore  DockerFile  Dockerfile  Dockerfile.beat  Dockerfile.nginx  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yaml  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt  supervisord.conf
IMS_admin/: apps.py  converter.py  forms.py  listviews.py  urls.py  views.py
IMS_admin/tempelates/: base_admin.html
IMS_admin/tempelates/admin/: analytics.html  category.html  home.html  logout.html  product.html  sales-summary.html  sales.html  send_sms.html  stock-movement.html  users.html
IMS_admin/templatetags/: admin_form_tags.py
IMS_production/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
IMS_production/migrations/: 0001_initial.py  0002_alter_stockmovement_movement_type.py  0003_alter_sale_total_amount_and_more.py  0004_product_unique_product_name_per_category.py  0005_alter_sale_sale_price_alter_sale_total_revenue.py
IMS_production/tempelates/: analytics.html  search-engine.html
IMS_staff/: apps.py  converter.py  forms.py  tasks.py  urls.py  views.py
IMS_staff/tempelates/: base_staff.html
IMS_staff/tempelates/staff/: home.html  (+6 more)
Inventory_MS/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_role.py
authentication/tempelates/: base-auth.html  logout.html
authentication/templatetags/: form_tags.py
nginx/: nginx.conf  ssl.conf
permission/: login.py
sms_tasks/: admin.py  apps.py  consumers.py  forms.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
staticfiles/css/: forms.css
tasks/: __init__.py  email_service.py  notifications.py  send_email.py  send_sms.py
utils/: constants.py
utils/whatsapp/: __init__.py  _model.py  _parameters.py  constants.py  helpers.py  messages.py  settings.py  tests.py
(+28 files in other folders)
