    [project]
    name = "inventory-management-system"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "asgiref==3.8.1",
        "certifi==2024.8.30",
        "crispy-bootstrap4==2024.10",
        "crispy-bootstrap5==2024.10",
        "distlib==0.3.9",
        "django==5.1.3",
        "django-crispy-forms==2.3",
        "filelock==3.16.1",
        "gunicorn==23.0.0",
        "packaging==24.2",
        "pipenv==2024.4.0",
        "platformdirs==4.3.6",
        "psycopg>=3.2.10",
        "psycopg2-binary==2.9.9",
        "python-decouple==3.8",
        "python-dotenv==1.0.1",
        "setuptools==75.5.0",
        "sqlparse==0.5.2",
        "tzdata==2024.2",
        "virtualenv==20.27.1",
        "whitenoise==6.8.2",
]
